# FastAPI

./: .python-version  Pipfile  fetch_data.py  insert_data.py  main.py  pyproject.toml  stock_analysis_data.py  stock_data.py  stocks.py  test.ipynb  test_code.ipynb  test_main.py
app/: db.py  fetch_stock.py  model.py
app/notebooks/: asynciothreadingmp.ipynb  closure.ipynb  dask.ipynb  decorators.ipynb  dictionary.ipynb  docker.ipynb  fetchdata.ipynb  firstclassfuntion.ipynb  generators.ipynb  innerfunction.ipynb  iterators.ipynb  joins.ipynb  lambda.ipynb  list.ipynb  mapreducefilter.ipynb  matplotlib.ipynb  middleware.ipynb  numpy.ipynb  oops.ipynb  pandas.ipynb  pydentic.ipynb  tuple.ipynb
