[project]
name = "fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Aprajita",email = "aprajitasinha4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
